# auth-service/internal/application/dtos/request/user_create.go
@@ -1,11 +1,6 @@
 package request
 
-type UserCreateRequest struct {
-	Username string `json:"username" binding:"required"`
-	Password string `json:"password" binding:"required"`
-	Email    string `json:"email" binding:"required,email"`
-}
-
-func (uc *UserCreateRequest) Validate() error {
-	return nil
+type CreateAccountRequest struct {
+	Email        string `json:"email" validate:"required,email,max=255"`
+	PasswordHash string `json:"password_hash" validate:"required,min=8,max=255"`
 }
